# ludum_dare_55

./: .gitignore  Cargo.toml  Makefile  main.rs
assets/aseprite/: GUI.aseprite  Makefile  axe.aseprite  background.aseprite  book.aseprite  demons.aseprite  no.aseprite  pickups.aseprite
src/: aseprite_loader.rs  component.rs  main.rs  system.rs
