 [package]
name = "comy_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
comfy = "0.3.1"
asefile = "0.3.8"
serde_json = "1.0"


[[bin]]
name = "comfy_rust"
path = "src/main.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 2

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=mold", "-Zshare-generics=y"]
